2011-05-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.6

  * Resueltos algunos bugs visuales de cierres de divs olvidados
  * Cambios en filtrado de facturas por cliente y proveedor
  * Eliminada caja de filtrado activo y sustituida por los
    selectores de filtrado

2011-05-26 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.5

  * Posibilidad de forzado de importes de facturas de proveedores

2011-05-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.4.1

  * Correccion en entradas de lineas de albaran para compras
  * Cambios en permisos de algunos archivos

2011-05-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.4

  * Eliminada opcion de recuperacion de albaranes perdidos (estaba
    solo para recuperar elementos del bug de creacion de facturas
    corregido en la version 0.6.1)
  * Cambios en backup de BBDD (el .sql no se comprime)
  * Entrada de lineas de albaran por concepto (sin vinculacion
    con el inventario)
  * Los filtros de fechas se guardan en cookies
    para que permanezcan tras la sesion
  * Filtrado por fechas en facturas
  * Primera version de informes
  * Ordenado de listados de proveedores

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.3

  * Cambio estetico

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.2

  * Eliminado plugin de will_paginate (se instala desde paquetes)

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.1

  * Bug en cobro de venta (selección de impresión de ticket)
  * Impresión de etiquetas de productos
  * Ajustes de presentacion de formularios de facturas 
  * Bug en creacion de facturas desde albaranes con importe = 0

2011-05-05 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6

  * Bug en creacion de tabla de sesiones para instalaciones nuevas
  * Facturas de otros gastos
  * Entradas/salidas de caja
  * Arqueo y cierre de caja
  * Libro diario
  * Resumen de posicion global
  * Checkbox de imprimir factura