@@ -111,7 +111,7 @@ margin-top:15px;
 .listado_campo_1_5, .listado_campo_1_5d, .listado_campo_1_5f { width:48px; }
 .listado_campo_2_3f, .listado_campo_1_3d, .listado_campo_1_3f, .listado_campo_1_5d, .listado_campo_1_5f { text-align: right; }
 
-.texto, .elemento, .elemento_x15, .elemento_c {
+.texto, .elemento, .elemento_x15, .elemento_x05, .elemento_c {
     font-size: 11px;
 }
 
@@ -122,6 +122,11 @@ margin-top:15px;
 
 .elemento_c {
     text-align: center;
+}
+
+.elemento_x05 {
+    float: left;
+    width: 95px;
 }
 
 .elemento_x15 {
