@@ -1,9 +1,13 @@
-2011-05-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.6
+2011-06-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.6
 
   * Resueltos algunos bugs visuales de cierres de divs olvidados
-  * Cambios en filtrado de facturas por cliente y proveedor
+  * Incluido filtrado de facturas por cliente y proveedor
+  * Incluido filtrado por facturas pagadas/no pagadas
   * Eliminada caja de filtrado activo y sustituida por los
     selectores de filtrado
+  * En los listados de facturas de proveedores y clientes se
+    muestra el codigo de albaran si no se definio codigo de
+    factura
 
 2011-05-26 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.5
 
